# qa_guru_rest_api

./: README.md  conftest.py  pyproject.toml  requirements.txt
json_schemas/: catfacts_get_breeds_schema.json  create_new_user_response_schema.json  get_single_resource_schema.json  successful_register_schema.json  update_single_user_response_schema.json
notifications/: config.json
tests/: test_catfact_api.py  test_reqres_api.py
