[tool.poetry]
name = "qa-guru-rest-api"
version = "0.1.0"
description = ""
authors = ["elenautkina <selenamondeu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc4"
pytest = "7.4.2"
requests = "2.31.0"
jsonschema = "4.19.0"
allure-pytest = "2.13.2"
curlify = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
